--- a/sample-dotnet-app.csproj
+++ b/sample-dotnet-app.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>sample_dotnet_app</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Amazon.Lambda.AspNetCoreServer.Hosting" Version="1.6.0" />
+  </ItemGroup>
+
 </Project>
